--- a/style.css
+++ b/style.css
@@ -355,8 +355,8 @@ li a:hover {
   margin-left: 2%;
   font-family: var(--font-title); 
   font-weight: 500;
-  color:#b5a9ae; 
-  font-size: .8vw;
+  color:#c2bcbf; 
+  font-size: 1.2vw;
   justify-content: center;
   align-items: center;
   align-content: center;
@@ -670,7 +670,7 @@ background-color: transparent;
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  height: 100%;
+  height: 90vh;
   padding: 0 5vw;
   
 }
@@ -686,7 +686,7 @@ background-color: transparent;
   margin-bottom: 10px;
 }
 .navLinksAbout li a {
-  
+  font-size: 3vw;
   font-weight: 200;
   
 }
@@ -1053,10 +1053,10 @@ background-color: #000000;
 }
 .projectLinks a{
   text-decoration: none;
-  color: rgba(225, 223, 236, 0.333);
-  text-transform: capitalize;
+  color: rgba(224, 219, 219, 0.884);
+  text-transform: uppercase;
   font-family: var(--font-title);
-  font-weight: 500;
+  font-weight: 900;
   margin-right: 5rem;
   font-size: 3rem;
   
@@ -1638,11 +1638,11 @@ width: 100%;
   }
 
   .bannerTitle {
-    font-size: 8vw;
+    font-size: 4.5vw;
   }
 
   .leadd {
-    font-size: 14px;
+    font-size: 12px;
     width: 95%;
   }
 
@@ -1651,11 +1651,36 @@ width: 100%;
     font-size: 12vw;
     text-align: center;
   }
-
+.layoutBox {
+ height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
   .aboutBox,
   .layoutAboutBox {
     flex-direction: column;
     align-items: center;
+  }
+.aboutBox{
+
+  display: flex;
+
+
+}
+#about .titleBoxAbout h1{
+
+  font-size: 20vw;
+
+}
+#about .titleBoxAbout{
+
+  width: 100%;
+}
+
+
+.navLinksAbout li a {
+   font-size: 5vw;
   }
 
   .projectCardImage img {
@@ -1875,22 +1900,7 @@ nav {
 }
 
 
-  .mobileMenu {
-    overflow-y: auto;
-    max-height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background: #000;
-    z-index: 999;
-    transition: transform 0.3s ease-in-out;
-    transform: translateY(-100%);
-  }
 
-  .mobileMenu.active {
-    transform: translateY(0);
-  }
   .leadd{
 
     font-size: 15px;
@@ -1934,7 +1944,7 @@ nav {
   padding: 1vw;
 }
 .hideblock .description p{
-font-size: 2vw;
+font-size: 2.3vw;
 margin-top: 10vh;
 
 }
