--- a/style.css
+++ b/style.css
@@ -1269,6 +1269,8 @@ align-content: center;
   padding: 0;
   margin: 0;
   filter: brightness(0.8);
+  width: 30px;
+  height: 30px;
 
 }
 #copyIcon:hover{
