--- a/style.css
+++ b/style.css
@@ -1713,8 +1713,9 @@ width: 100%;
   }
   .banner-content{
     margin-top: 15%;
-    padding: 3rem;
-    height: 65vh;
+    padding: 2rem;
+    height: 60vh;
+    width: 70%;
 
   }
 
@@ -1906,17 +1907,25 @@ nav {
 
   .leadd{
 
-    font-size: 15px;
+    font-size: 13px;
 
   }
   .layoutBox{
-    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
   .sillhoullete{
     top:60%;
     left: 70%;
     width: 80vw;
   }
+  .sillhoullete img{
+
+    height: 400px;
+    width: 300px;
+  }
+
 
 #about .titleBoxAbout{
 
