--- a/style.css
+++ b/style.css
@@ -50,6 +50,9 @@ section{
   scroll-snap-align: start;
   
 }
+.mobileHide{
+  display: inline;
+}
 
 /*Main*/
 .containerMain {
@@ -1908,6 +1911,7 @@ nav {
   .leadd{
 
     font-size: 13px;
+    padding-left: 5px;
 
   }
   .layoutBox{
@@ -1916,16 +1920,20 @@ nav {
     justify-content: center;
   }
   .sillhoullete{
-    top:60%;
-    left: 70%;
+    top:40vh;
+    left: 70vw;
     width: 80vw;
+    mask-image: linear-gradient(to top, transparent 35%, black 85%);
+    
   }
   .sillhoullete img{
 
     height: 400px;
     width: 300px;
   }
-
+.mobileHide{
+  display: none;
+}
 
 #about .titleBoxAbout{
 
@@ -1952,12 +1960,12 @@ nav {
 }
 #about .description{
   height: 65vh;
-  width: 60vw;
+  width: 80vw;
   padding: 1vw;
 }
 .hideblock .description p{
-font-size: 2.3vw;
-margin-top: 10vh;
+font-size: 12px;
+margin-top: 3vh;
 
 }
 .Discover{
