--- a/style.css
+++ b/style.css
@@ -1715,7 +1715,13 @@ width: 100%;
   }
 }
 @media (max-width: 600px) {
- 
+  html, body{
+    overflow-x: hidden;
+  }
+
+ *:hover {
+    transition: none;
+  }
 
   .bannerTitle{
     font-size: 6vw;
@@ -1989,6 +1995,13 @@ margin-top: 3vh;
   top: 40vh;
   left: 80vw;
 }
+#experience{
+
+ filter: brightness(0); 
+ overflow-y: auto;
+ 
+
+}
 #experience .mainContent{
   flex-direction: column-reverse;
   align-items: center;
@@ -1997,6 +2010,7 @@ margin-top: 3vh;
 .experienceTitlebox{
   justify-content: flex-start;
   width: 89%;
+  
 }
 .experienceTitlebox h2{
   font-size: 3vw;
@@ -2006,17 +2020,12 @@ margin-top: 3vh;
   font-size: 6vw;
 }
 #experience .banner-content{
-margin-bottom: 5vh;
 margin-right: 0;
 padding: 3vw;
 width: 85%;
+
 }
-#experience .containerMain{
-  width: 100%;
-  height: 90vh;
-  
-  
-}
+
 #experience .leadd{
 
 
@@ -2031,12 +2040,17 @@ padding:1vw;
 }
 .experienceList p {
   max-width: 95vw;
-  font-size: 12px;
+  font-size: 9px;
   text-align:center;
 }
 .experienceList h2 {
   font-size: 13px;
   text-align: center;
+}
+.projectList{
+  height: 100%;
+  
+  will-change: transform;
 }
 
 .myprojects{
@@ -2063,9 +2077,7 @@ margin: 1vw;
 .workContent h2{
   font-size: 1.5vw;
 }
-.technologiesContainer{
 
-}
 .technologiesList{
 flex-wrap: wrap;
 justify-content: center;
@@ -2075,7 +2087,7 @@ justify-content: center;
   padding: 1vw;
 }
 .projectCardImage{
-  height: 26vh;
+  height: 15vh;
 }
 .projectCardImage img {
   width: 300px;
