--- a/style.css
+++ b/style.css
@@ -312,7 +312,7 @@ li a {
   padding: 15px;
   font-family: var(--font-title);
   font-weight: 400;
-  font-size: 1.5vw;
+  font-size: 2vw;
 }
 li a:hover {
   color: var(--neon-coral);
@@ -406,7 +406,7 @@ li a:hover {
 }
 .sillhoullete {
   position: absolute;
-  top: 10%;
+  top: 20%;
   left: 85%;
   width: 30vw;
   max-width: 800px;
@@ -648,12 +648,21 @@ background-color: transparent;
   padding-left: 1%;
   width: 50%;
   margin-left: 5%;
-
+  height:auto;
 
   display: none;
   
   
 }
+
+#about .description{
+
+height:50vh;
+max-height: 50vh;
+
+
+}
+
 .hideblock .description p {
   font-family: var(--font-body);
   font-weight: 200;
@@ -667,7 +676,7 @@ background-color: transparent;
   line-height: 1.5;
   pointer-events: none;
   user-select: none;
-  margin-top: 10vh;
+  margin-top: 3vh;
   font-size: 1vw;
  
   
@@ -679,7 +688,8 @@ background-color: transparent;
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  height: 90vh;
+  margin-top: 10vh;
+  height: auto;
   padding: 0 5vw;
   
 }
@@ -1181,6 +1191,10 @@ background-color: #000000;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  
+
+
+
   background: rgba(87, 41, 89, 0.1); /* Fondo sutil */
   backdrop-filter: blur(20px);
   
@@ -1195,29 +1209,47 @@ background-color: #000000;
   border: 1px solid rgba(131, 131, 131, 0.18);
 }
 
+.bannerContact{
+
+  width: 70%;
+  
+
+}
+.information{
+  width: 70%;
+}
+.socialLinks{
+  width: 70%;
+}
+.mailtoForm{
+  width: 70%;
+}
+
 
 #contact h1 {
   font-family: var(--font-title);
   font-weight: 800;
     color:var(--text-light);
-  font-size: 3vw;
+  font-size: 4vw;
   font-weight: 900;
   text-shadow: 0 0 16px rgba(243, 238, 238, 0.57);
 
   text-transform: uppercase;
-  margin: 0;
+  padding: 0;
   text-align: center;
   pointer-events: none;
   user-select: none;
+  margin: 0 ;
+  margin-top: 1vh;
   
 }
 #contact h2 {
   padding: 0;
   font-weight: 600;
   color: rgba(240, 236, 236, 0.327);
-  font-size: 1vw;
+  font-size: 1.5vw;
   text-align: center;
-  
+  margin: 0;
   pointer-events: none;
   user-select: none;
   
@@ -1232,18 +1264,18 @@ background-color: #000000;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 20px;
-  margin: 1rem;
+  gap: 3vw;
+  
 
 
 
 }
 .socialLinks a {
-  color: rgba(255, 255, 255, 0.379);
-  text-shadow: #fd0087 0px 0px 14px;
+  color: rgba(255, 255, 255, 0.582);
   text-decoration: none;
-  font-weight: 500;
+  font-weight: 900;
   transition: color 0.3s ease-in-out;
+  font-size: 1.5vw;
   
 }
 .socialLinks a:hover {
@@ -1257,16 +1289,18 @@ background-color: #000000;
   align-items: center;
   justify-content: center;
   align-content: center;
+  margin: 0;
   
 }
 .emailContent{
 
-font-family: var(--font-title);
-font-size:1vw;
+font-family: var(--font-body);
+font-size:1.3vw;
 color: var(--text-light);
 display: flex;
 align-items: center;
 align-content: center;
+text-decoration: underline;
 }
 
 
@@ -1274,27 +1308,24 @@ align-content: center;
 #copyIcon{
   cursor: pointer;
   background: transparent;
-  scale: 0.5;
-  padding: 0;
+  scale: 1.4;
+  padding:1vw;
   margin: 0;
   filter: brightness(0.8);
   width: 30px;
   height: 30px;
 
 }
-#copyIcon:hover{
-  transition: all 1.2 ease-in-out;
-  scale: 0.7;
-}
+
 
 .mailtoForm{
 
-width: 100%;
-height: auto;
+height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
+  
   gap: 20px;
   color: #fffffff4;
 
@@ -1302,19 +1333,19 @@ height: auto;
 }
 .mailtoForm .label{
 
-  font-size: 1vw;
-  color: #ffffff7f;
+  font-size: 2.5vw;
+  color: #ffffff2c;
   text-align: center;
-  text-transform: uppercase;
-  font-family: var(--font-title);
-  font-weight: 500;
+  text-transform: capitalize;
+  font-family: var(--font-body);
+  font-weight: 600;
   margin-bottom: 1rem;
 
 
 }
 .mailtoForm input {
-  width: 80%;
-  max-width: 400px; 
+  width: 70%;
+   
   padding: 10px;
   border: none;
   border-radius: 5px;
@@ -1329,9 +1360,9 @@ height: auto;
   box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.3);
 }
 .mailtoForm textarea {
-  width: 80%;
+  width: 70%;
   
-  height: 200px;
+  height: auto;
   padding: 10px;
   border: none;
   border-radius: 5px;
@@ -1350,6 +1381,12 @@ height: auto;
   font-family: var(--font-body);
   filter: invert(100%);
   cursor: pointer;
+  
+}
+.mailtoForm :placeholder-shown{
+
+  font-size: 1.8vw;
+  font-family: var(--font-body);
   
 }
 
@@ -1387,50 +1424,12 @@ footer{
 
 
 
-/* Mantiene la posición proporcional en todos los viewports */
-@media (max-width: 900px) {
-  .sillhoullete {
-    top: 8vw;
-    left: 50vw;
-    width: 48vw;
-    max-width: 90vw;
-  }
-   .Discover {
-    top: 8vw;
-    left: 50vw;
-    width: 48vw;
-    max-width: 90vw;
-  }
-}
-
-
-
-.containerImg img {
-  width: 60px;
-  height: 60px;
-  background-color: black;
-  align-items: center;
-  display: flex;
-  justify-content: center;
-
-}
-
-.containerImg {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  align-items: center;
-}
- .logo {
-   display: none;
-  }
-
-
-
 
 
 @media (width: 1920px) and (height: 1080px) {
- 
+ .sillhoullete{
+  top: 28%  ;
+ }
 
 
 .projectCardImage{
@@ -1442,6 +1441,7 @@ footer{
   height: 50%;
 
 }
+
 
 
 
@@ -1464,18 +1464,28 @@ footer{
   height: 60vh;
   width: 75vw;
   }
+  li a{
+    font-size: 2.5vw;
+  }
+  .titleBox{
+    height: auto;
+  }
   .sillhoullete{
-
+    left: 87%;
     top: 25%;
     width: 40vw;
+    height: 600px;
   }
   .sillhoullete img{
     z-index: -2;
+    width: 530;
+    height: 600px;
   }
 
   .leadd{
     
-    font-size: 1.1rem;
+    font-size: 1.3vw;
+    margin-top: 5%;
   }
 
   .experienceTitlebox{
@@ -1561,15 +1571,19 @@ width: 100%;
 
 }
 
-
 @media (max-width: 1280px) {
+  li a{
+    font-size: 2vw;
+  }
   .bannerTitle {
-    font-size: 5.5vw;
+    font-size: 6vw;
   }
 
   .leadd {
-    font-size: 1.1vw;
+    font-size: 1.3vw;
     width: 80%;
+    height: auto;
+    margin-top: 5%;
   }
 
   .projectCardImage img {
@@ -1592,12 +1606,33 @@ width: 100%;
 }
 
 @media (max-width: 1024px) {
+
+  .mainContent{
+  
+  align-items:center;
+  }
+
+
+  .banner-content{
+    height:60vh;
+
+
+  }
+ .layoutBox{
+
+    height:90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+
   .titleBox {
     align-items: center;
     text-align: center;
   }
 
-  .bannerTitle {
+.bannerTitle {
     font-size: 5vw;
   }
   .bannerTitleBack{
@@ -1606,14 +1641,22 @@ width: 100%;
   }
 
   .bannerTitle3 {
-    font-size: 2vw;
+    font-size: 1.8vw;
   }
 
-  .leadd {
-    font-size: 1.4vw;
+   .leadd {
+    font-size: 1.6vw;
     width: 90%;
     text-align: left;
+    height: auto;
+    
   }
+ .titleBox{
+
+  height: 30%;
+
+
+}
 
   .experienceTitlebox {
     width: 100%;
@@ -1638,11 +1681,32 @@ width: 100%;
 
   .sillhoullete {
 
-      top: 20%;
-      left: 50%;
+      top: 25%;
+      left: 70%;
       z-index: -40;
   }
+
+.sillhoullete img{
+  width: 300px;
+  height: 380px;
 }
+
+}
+@media (max-width: 900px) {
+  .sillhoullete {
+    top: 8vw;
+    left: 50vw;
+    width: 48vw;
+    max-width: 90vw;
+  }
+   .Discover {
+    top: 8vw;
+    left: 50vw;
+    width: 48vw;
+    max-width: 90vw;
+  }
+}
+
 @media (max-width: 768px) {
   .banner-content {
     padding: 1rem;
@@ -1713,11 +1777,27 @@ width: 100%;
   .projectLinks a {
     font-size: 1.4rem;
   }
+  .contactContent{
+    height: 70%;
+  }
 }
 @media (max-width: 600px) {
   html, body{
     overflow-x: hidden;
+     overflow-y: auto;   /* ✅ permite scroll vertical normal */
+  scroll-behavior: auto; /* ❗️ importante si usás GSAP o Lenis */
+  touch-action: auto;
   }
+
+ 
+/*Implementacion GSAP*/
+/* 
+#eperience, .horizontalWrapper{
+   
+    overflow: hidden;     /* ✅ evita scroll nativo mientras animás */
+   
+
+} */
 
  *:hover {
     transition: none;
@@ -1725,6 +1805,11 @@ width: 100%;
 
   .bannerTitle{
     font-size: 6vw;
+    font-weight: 900;
+    margin: 0;
+  }
+  .bannerTitle3{
+    font-size: 2.5vw;
   }
   .banner-content{
     margin-top: 15%;
@@ -1734,66 +1819,29 @@ width: 100%;
 
   }
 
+
+  .mainContent{
+
+    align-items: flex-start;
+
+  }
     .bannerTitleBack {
-    /* font-size: 26vw;
-    top: 2%;
-    left: 16%;
+     font-size: 15vw;
+    top: -10%;
+    left: 1%;
     text-shadow:
       0 0 8px rgba(255,255,255,0.15),
       2px 2px 12px rgba(255,255,255,0.12),
       -2px -2px 18px rgba(255,255,255,0.10),
       4px 4px 24px rgba(242,92,132,0.08),
       -4px -4px 32px rgba(90,49,225,0.08);
-    background: linear-gradient(120deg, rgba(255,255,255,0.12) 60%, rgba(242,92,132,0.08) 100%);
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    animation: ghost-disintegrate 8s infinite alternate;
-    filter: blur(2.5px) brightness(1.1); */
-    display: none;
 
     
 
     }
-    /* @keyframes ghost-disintegrate {
-      0% {
-      letter-spacing: 0.02em;
-      filter: blur(1px) brightness(1.1);
-      opacity: 0.95;
-      text-shadow:
-        0 0 8px rgba(255,255,255,0.15),
-        2px 2px 12px rgba(255,255,255,0.12),
-        -2px -2px 18px rgba(255,255,255,0.10),
-        4px 4px 24px rgba(242,92,132,0.08),
-        -4px -4px 32px rgba(90,49,225,0.08);
-      }
-      60% {
-      letter-spacing: 0.08em;
-      filter: blur(3px) brightness(1.2);
-      opacity: 0.7;
-      text-shadow:
-        0 0 16px rgba(255,255,255,0.18),
-        4px 4px 24px rgba(255,255,255,0.13),
-        -4px -4px 36px rgba(255,255,255,0.12),
-        8px 8px 48px rgba(242,92,132,0.12),
-        -8px -8px 64px rgba(90,49,225,0.12);
-      }
-      100% {
-      letter-spacing: 0.12em;
-      filter: blur(16px) brightness(1.25);
-      opacity: 0.55;
-      text-shadow:
-        0 0 24px rgba(255,255,255,0.22),
-        6px 6px 36px rgba(255,255,255,0.16),
-        -6px -6px 54px rgba(255,255,255,0.13),
-        12px 12px 72px rgba(242,92,132,0.14),
-        -12px -12px 96px rgba(90,49,225,0.14);
-      }
-    } */
 
-.bannerTitleBack{
-  top: -22%;
-}
+
+
 
 
 
@@ -1918,18 +1966,28 @@ nav {
   background: wheat;
 }
 
+ .titleBox{
+  height: auto;
+}
 
 
   .leadd{
 
-    font-size: 13px;
-    padding-left: 5px;
+    font-size: 15px;
+    padding-left:0;
+    border-left: 0px;
+    text-align:center;
+    text-wrap-mode: normal;
+    width: 100%;
+    
+    
 
   }
-  .layoutBox{
+ .layoutBox{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
+    height: 70%;
   }
   .sillhoullete{
     top:40vh;
@@ -1966,9 +2024,14 @@ nav {
   list-style: none;
   padding: 0;
   margin-top: 5vh;
+ 
 }
 .navLinksAbout li a{
   font-size: 8vw;
+    
+  
+  
+  
 
 }
 .layoutAboutBox{
@@ -2002,6 +2065,8 @@ margin-top: 3vh;
  
 
 }
+
+
 #experience .mainContent{
   flex-direction: column-reverse;
   align-items: center;
@@ -2113,26 +2178,44 @@ justify-content: center;
 
 .contactContent{
   height: auto;
+  width: 90%;
 }
 #contact h1{
-  font-size: 8vw;
-}
-#contact h2{
   font-size: 5vw;
 }
-.emailContent{
-   font-size: 2.5vw;
+#copyIcon{
+  width: 20px;
+  height: 20px;
+  padding: 15px;
 }
-.mailtoForm label{
+#contact h2{
   font-size: 3vw;
+}
+.socialLinks a{
+  font-size: 3.5vw;
+}
+.emailContent{
+   font-size: 3.4vw;
+}
+.mailtoForm{
+  height: auto;
+  margin: 4%;
+}
+.mailtoForm .label{
+  font-size: 5vw;
 }
 .mailtoForm input{
   font-size: 3vw;
 }.mailtoForm textarea{
   font-size: 3vw;
 }
+.mailtoForm :placeholder-shown{
+  font-size: 3vw;
+}
+
+
+
 footer small {
   font-size: 3vw;
 }
 
-}
