--- a/style.css
+++ b/style.css
@@ -125,6 +125,11 @@ section{
 
 
 }
+.shutDown{
+  background: none;
+  background-color: #000000;
+
+}
 
 
 
@@ -485,7 +490,7 @@ li a:hover {
 /*About*/
 #about {
   scroll-snap-type: y mandatory;
- 
+ will-change: transform;
 background-color: var(--vice-rose);
 background-color: transparent;
 /*background-color: var(--midnight-plum);*/
@@ -706,7 +711,7 @@ max-height: 50vh;
 }
 .navLinksAbout li a {
   font-size: 3vw;
-  font-weight: 200;
+  font-weight: 900;
   
 }
 .navLinksAbout li a:hover {
@@ -1229,7 +1234,7 @@ background-color: #000000;
 #contact h1 {
   font-family: var(--font-title);
   font-weight: 800;
-    color:var(--text-light);
+    color: var(--text-light);
   font-size: 4vw;
   font-weight: 900;
   text-shadow: 0 0 16px rgba(243, 238, 238, 0.57);
@@ -1786,21 +1791,54 @@ width: 100%;
   }
 }
 @media (max-width: 600px) {
-  html, body{
-    overflow-x: hidden;
-     
- 
-  }
 
- 
-/*Implementacion GSAP*/
-/* 
-#eperience, .horizontalWrapper{
+
+.noise-blur-overlay {
+ display: none;
+ filter: none;
+}
+.background-distorted{
+  display: none;
+}
+svg, filter, .bubble, .backMove{
+  display: none;
+}
+
+.banner{
+
+  height: 100%;
    
-    overflow: hidden;     /* ✅ evita scroll nativo mientras animás */
-   
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  overflow-y: auto;
+  scroll-behavior: auto;
+  scroll-snap-type:none ;
+  scrollbar-width: auto; /* Firefox */
+  background-color: transparent;
+ 
+}
 
 
+#about{
+  scroll-snap-type: none;
+}
+section{
+  height: 100svh;
+  scroll-snap-type: none;
+  overflow: hidden;
+}
+
+* {
+  outline: 1px solid rgba(255, 0, 0, 0.2); /* visualiza todos los elementos visibles */
+}
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
  *:hover {
     transition: none;
@@ -1815,16 +1853,29 @@ width: 100%;
     font-size: 2.5vw;
   }
   .banner-content{
-    margin-top: 15%;
-    padding: 2rem;
-    height: 60vh;
+    
+    backdrop-filter: blur(8px) saturate(110%);
+    -webkit-backdrop-filter: blur(8px) saturate(110%);
+    min-height: 80svh;
     width: 70%;
-
+    box-shadow: 0 4px 24px rgba(0,0,0,0.2);
+    z-index: 2;
+     will-change: transform, opacity;
+  transform: translateZ(0); /* Estabiliza capa */
+  
+    backface-visibility: hidden;
+    
   }
 
+  .containerMain{
+    height: 100%;
+    overflow: hidden;
+    
+  }
+ 
 
   .mainContent{
-
+    height: 100%;
     align-items: flex-start;
 
   }
@@ -1990,14 +2041,13 @@ nav {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height: 70%;
+    height: 100%;
   }
   .sillhoullete{
-    top:40vh;
-    left: 65vw;
-    width: 300px;
-    height: 300px;
-   
+    top:45vh;
+    left: 51vw;
+    height: 200px;
+    width: 190px;
    
    
     
@@ -2006,7 +2056,7 @@ nav {
   .sillhoullete img{
 
     height: 300px;
-    width: 300px;
+    width: 200px;
    
     
 
@@ -2068,7 +2118,7 @@ margin-top: 3vh;
 
  filter: brightness(0); 
  overflow-y: auto;
- 
+ will-change: transform;
 
 }
 
