--- a/mobile.css
+++ b/mobile.css
@@ -10,6 +10,7 @@ html, body, *{
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
+    
 
 }
 body{
@@ -665,7 +666,6 @@ display: none;
 
 
 .horizontalWrapper {
-  overflow: hidden;
  
   height: 90%;
   position: relative;
@@ -1080,8 +1080,12 @@ footer{
   text-align: center;
   padding: 20px;
   font-family: var(--font-body);
-  font-size: 2vw;
+  font-size: 3.2vw;
   position: relative;
   z-index: 2;
-  height: 100px;
+  height: 50px;
 } 
+html, body {
+  overflow-x: clip !important;
+  max-width: 100vw;
+}
